Refactor : 스케줄 조회에 멤버 접근 권한 확인 추가(S10P31A602-371)